--- a/views/add-product.html
+++ b/views/add-product.html
@@ -5,21 +5,74 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Add Product</title>
+    <style>
+      body {
+        font-family: sans-serif;
+      }
+      header {
+        background-color: #f0f0f0;
+        padding: 1rem;
+        text-align: center;
+      }
+      nav {
+        display: flex;
+        justify-content: space-around;
+      }
+      nav ul {
+        display: flex;
+        list-style: none;
+        padding: 0;
+      }
+      nav ul li {
+        margin: 0 1rem;
+      }
+      nav ul li a:hover,
+      nav ul li a:active,
+      nav ul li a.active {
+        color: red;
+      }
+      main {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      form {
+        display: flex;
+        flex-direction: column;
+        width: 60%;
+      }
+      form input {
+        margin-bottom: 1rem;
+        border-color: orange;
+      }
+      form button {
+        color: orangered;
+        border: 1px solid orange;
+        background-color: white;
+        padding: 0.5rem 1rem;
+        cursor: pointer;
+      }
+    </style>
   </head>
   <body>
     <header>
       <nav>
         <ul>
           <li><a href="/">Shop</a></li>
-          <li><a href="/admin/add-product">Add Product</a></li>
+          <li><a href="/admin/add-product" class="active">Add Product</a></li>
         </ul>
       </nav>
     </header>
     <main>
       <form action="/admin/add-product" method="POST">
+        <label for="title">Title</label>
         <input type="text" name="title" placeholder="Title" />
+        <label for="price">Price</label>
         <input type="number" name="price" placeholder="Price" />
+        <label for="imageUrl">Image URL</label>
         <input type="text" name="imageUrl" placeholder="Image URL" />
+        <label for="description">Description</label>
         <input type="text" name="description" placeholder="Description" />
         <button type="submit">Add Product</button>
       </form>
