load static file

--- a/views/shop.html
+++ b/views/shop.html
@@ -5,51 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Add Product</title>
-    <style>
-      body {
-        font-family: sans-serif;
-      }
-      header {
-        background-color: #f0f0f0;
-        padding: 1rem;
-        text-align: center;
-      }
-      nav {
-        display: flex;
-        justify-content: space-around;
-      }
-      nav ul {
-        display: flex;
-        list-style: none;
-        padding: 0;
-      }
-      nav ul li {
-        margin: 0 1rem;
-      }
-      nav ul li a:hover,
-      nav ul li a:active,
-      nav ul li a.active {
-        color: red;
-      }
-      main {
-        margin: 2rem auto;
-        width: 80%;
-      }
-      form {
-        display: flex;
-        flex-direction: column;
-        width: 30%;
-      }
-      form input {
-        margin: 0.5rem 0;
-      }
-      form button {
-        background-color: #f0f0f0;
-        border: 1px solid #ccc;
-        padding: 0.5rem 1rem;
-        cursor: pointer;
-      }
-    </style>
+    <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
     <header>
