template engine options

--- a/views/shop.html
+++ b/views/shop.html
@@ -17,8 +17,16 @@
       </nav>
     </header>
     <main>
-      <h1>My Product</h1>
-      <p>List of all the products</p>
+      <article>
+        <h1>Great book</h1>
+      </article>
+      <div>
+        <img src="" />
+      </div>
+      <div>
+        <h2>$19.9</h2>
+        <p>A very interesting book about programming</p>
+      </div>
     </main>
   </body>
 </html>
