--- a/views/add-product.ejs
+++ b/views/add-product.ejs
@@ -1,21 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%= docTitle%></title>
+<%- include('./includes/head.ejs') %>
+    <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/css/product.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="/">Shop</a></li>
-          <li><a href="/admin/add-product" class="active">Add Product</a></li>
-        </ul>
-      </nav>
-    </header>
+<%- include('./includes/navigation.ejs') %>
     <main>
       <form action="/admin/add-product" method="POST">
         <label for="title">Title</label>
@@ -29,5 +17,4 @@
         <button type="submit">Add Product</button>
       </form>
     </main>
-  </body>
-</html>
+<%- include('./includes/end.ejs') %>
