--- a/views/error-404.ejs
+++ b/views/error-404.ejs
@@ -1,20 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%= docTitle%></title>
+<%- include('./includes/head.ejs') %>
+    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/product.css" />
   </head>
+
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="/">Shop</a></li>
-          <li><a h ref="/admin/add-product">Add Product</a></li>
-        </ul>
-      </nav>
-    </header>
+<%- include('./includes/navigation.ejs') %>
     <h1>404 Page Not Found</h1>
-  </body>
-</html>
+
+<%- include('./includes/end.ejs') %>
