--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -1,23 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%= docTitle%></title>
+<%- include('./includes/head.ejs') %>
     <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/product.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="/">Shop</a></li>
-          <li><a href="/admin/add-product">Add Product</a></li>
-        </ul>
-      </nav>
-    </header>
+<%- include('./includes/navigation.ejs') %>
     <main>
-      <% if(prods.length > 0) { for (let product in prods) { %>
+      <% if(prods.length > 0) { for (let product of prods) { %>
       <article>
         <h1><%= product.title%></h1>
         <div>
@@ -34,5 +22,4 @@
       <h1>No Product Found</h1>
       <% } %>
     </main>
-  </body>
-</html>
+<%- include('./includes/end.ejs') %>
